[tool.poetry]
name = "tuna2134-docs"
version = "0.1.0"
description = ""
authors = ["tuna2134 <me@tuna2134.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
