[tool.poetry]
name = "tuna2134-docs"
version = "0.1.0"
description = ""
authors = ["tuna2134 <me@tuna2134.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.18"
pygments = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
